--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.0",
     "@testing-library/jest-dom": "^5.15.1",
-    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.1",
@@ -49,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^12.1.2"
   }
 }
